--- a/Cherish/CSS-MySite/css/style.css
+++ b/Cherish/CSS-MySite/css/style.css
@@ -1,30 +1,72 @@
 body{
-    margin: 0;
+    background-color:black;
+    margin: 0%;
+    text-align: center;
+    font-family: 'Merriweather', serif;
 }
 h1{
-    margin-top: 0;
+    font-family: 'Sacramento', cursive;
+    font-size: 90px;
+    line-height: 2;
+    margin: 50 auto 50 auto;
+    color: #66BFBF;
+}
+h2{
+    font-family: 'Sacramento', cursive;
+    color: #66BFBF;
+    font-size: 30px;
+}
+h3{
+    color: #11999E;
+}
+a{
+    color: #11999E;
+}
+.h{
+    font-weight: normal;
+}
+p{
+    color:white;
+}
+.skill-row{
+    text-align: left;
+    width: 50%;
+    margin: 100px auto 100px auto;
+    line-height: 2;
+}
+.IA{
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.IP{
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+    margin-bottom: 30px;
 }
 .top{
-    background-color: red;
-    height: 200px;
-    width: 200px;
     position: relative;
-    left: 400px;
+    padding-top: 100px;
+    background-color: #C2FFD9;
 }
 .middle{
-    background-color: blue;
-    height: 200px;
-    width: 200px;
-    position: relative;
-    bottom: 200px;
+    
 }
 .bottom{
-    background-color: yellow;
-    height: 200px;
-    width: 200px;
-    position: relative;
-    left: 200px;
-    bottom: 400px;
+    
+}
+.kgf{
+    border-radius: 100%;
+}
+.top-cloud{
+    position: absolute;
+    right: 150px;
+    top:30px;
+}
+.bottom-cloud{
+    position: absolute;
 }
 span{
     background-color: pink;
