--- a/Cherish/ToDoList -v1/views/list.ejs
+++ b/Cherish/ToDoList -v1/views/list.ejs
@@ -1,22 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-</head>
-<body>
-    <h1><%- kindofDay %></h1>
-    <ul>
-        <li>Buy Food</li>
-        <li>Cook Food</li>
-        <li>Eat Food</li>
-    </ul>
+<%- include("header") -%> 
 
-    <form action="/" method="POST">
-        <input type="text" name="newItem">
-        <button type="submit" name="button">Add</button>
-    </form>
-</body>
-</html>
+    <div class="box" id="heading">
+        <h1><%- listTitle %> </h1>
+    </div>
+
+    <div class="box">
+        <%for(let i=0;i<newListItems.length;i++){%>
+            <div class="item">
+                <input type="checkbox">
+                <p><%- newListItems[i] %></p>
+            </div>
+        <%}%>
+
+        <form class="item" action="/" method="POST">
+            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+            <button type="submit" name="list" value=<%- listTitle %> >+</button>
+        </form>
+    </div>
+
+<%- include("footer") -%> 
