Blog v1 challenge finished

--- a/Cherish/ejs-challenge/views/home.ejs
+++ b/Cherish/ejs-challenge/views/home.ejs
@@ -3,4 +3,9 @@
 <h1>Home</h1>
 <p><%- hsc %> </p>
 
+<%newPostItems.forEach(function(element){%>
+    <h1><%- element.title %></h1>
+    <p><%- element.post_body.substring(0,100)+"...." %><a href="/posts/<%- element.title %> >">Read More</a></p>
+<%});%>
+
 <%- include("partials/footer") -%> 
