--- a/Cherish/ejs-challenge/views/partials/header.ejs
+++ b/Cherish/ejs-challenge/views/partials/header.ejs
@@ -2,14 +2,14 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <title>Daily Journal</title>
+  <title>CS_Blogs</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/styles.css">
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <p class="navbar-brand">DAILY JOURNAL</p>
+        <p class="navbar-brand">CS_Blogs</p>
       </div>
         <ul class="nav navbar-nav navbar-right">
           <!-- 6 -->
